_2008_09_12__16_11_05_ Chi-Hsiu Liang

  * Check in the changes Dave made on unimolecular ILT and corrections on the work vector in ILT. Please check the changes
    in MesmerILT.
  * Reorganize ReadRateCoeffParameters() in different reactions into one function in Reaction.

_2008_09_10__14_28_16_ Chi-Hsiu Liang

  * Separated out control flags from MesmerEnv to MesmerFlags
  * Re-enable printing DOS of source term when flag is turned on
  * Renamed m_pSystemCollisionOperator to m_pReactionOperator to reflect that this operator does operate on reactions.
  * Updated manual

2008-9-8 Dave Glowacki

* fixed a bug in Association Reaction and MesmerILT which incorrectly calculated Tinf
* updated the baseline input file for acetylene-OH + O2 in order to get rid of confusing structure

_2008_09_08__15_54_34_ Chi-Hsiu Liang

  * Add a section to turn on the printing of reaction operator.
  * Updated the manual.

_2008_08_29__18_20_54_ Chi-Hsiu Liang

  * Clean up some console and log messages/time stamps.

2008-8-29 Dave Glowacki

* fixed a bug in testRateConstant() routine in irreversible exchange reaction class which did not reset the canonical loss rate to 0 in a grid search
* changed reaction class member data m_forwardCanonicalRate and m_backwardCanonicalRate from protected to private, added set and get functions for
  this member data, and made appropriate changes to other derived reaction classes

_2008_08_29__11_45_44_ Chi-Hsiu Liang

  * Removed Overloading of countCellDOS() in ClassicalRotor and update baselines.

_2008_08_29__11_06_12_ Chi-Hsiu Liang

  * Modified README
  * Provide the class DensityOfStatesCalculator a virtual function that convolutes reactants DOS directly by 
    fast Laplace transform. In which, removed some unnecessary functions, variables from AssociationReaction and 
    IrreversibleExchangeReaction. countDimerCellDOS() is kept in this version.
  * Add a section to explain output file in the Manual.