@@ -22,6 +22,9 @@ Cannot find argument me:frequenciesScaleFactor
 No method for the calculation of DOS in HSO2 is provided. Default method <Classical rotors> is used.
 Cannot find argument me:spinMultiplicity in HSO2. Default value 1 is used.
 No method for the calculation of distribution fraction in HSO2 is provided. Default method <Boltzmann> is used.
+The me:tunneling element or attribute was missing or empty.
+No tunneling method was found for R1
+Not a unimolecular reaction: look for excess reactant concentration.
 The description element or attribute was missing or empty.
 Cannot find argument me:eletronicExcitation for TS1
 Cannot find argument me:symmetryNumber. Default value 1 is used.
@@ -29,9 +32,6 @@ Cannot find argument me:frequenciesScaleFactor
 No method for the calculation of DOS in TS1 is provided. Default method <Classical rotors> is used.
 Cannot find argument me:spinMultiplicity in TS1. Default value 1 is used.
 No imaginary vibrational frequency for TS1.
-The me:tunneling element or attribute was missing or empty.
-No tunneling method was found for R1
-Not a unimolecular reaction: look for excess reactant concentration.
 The description element or attribute was missing or empty.
 The me:precision element or attribute was missing or empty.
 The me:MaximumEvolutionTime element or attribute was missing or empty.
@@ -262,10 +262,10 @@ m_SpinMultiplicity was not defined but requested in SO2. Default value 1 is give
 m_SpinMultiplicity was not defined but requested in SO2. Default value 1 is given.
 Diagonlize Collision Operator -- Time elapsed: 0 seconds.
 
-Finish Calculation -- Time elapsed: 5 seconds.
+Finish Calculation -- Time elapsed: 4 seconds.
 In total, 1 temperature/concentration-pressure points calculated.
  *Info in main
- -- Total time elapsed: 8 seconds.
+ -- Total time elapsed: 7 seconds.
 
 System saved
 m_Mass is provided but not used in TS1
