@@ -11,13 +11,13 @@ Cannot find argument me:eletronicExcitation for 2-pentyl
 Cannot find argument me:frequenciesScaleFactor
 No method for the calculation of DOS in 2-pentyl is provided. Default method <Classical rotors> is used.
 No method for the calculation of distribution fraction in 2-pentyl is provided. Default method <Boltzmann> is used.
+The me:tunneling element or attribute was missing or empty.
+No tunneling method was found for R1
 The description element or attribute was missing or empty.
 Cannot find argument me:eletronicExcitation for n-pentyl=TS=2-pentyl
 Cannot find argument me:frequenciesScaleFactor
 No method for the calculation of DOS in n-pentyl=TS=2-pentyl is provided. Default method <Classical rotors> is used.
 No imaginary vibrational frequency for n-pentyl=TS=2-pentyl.
-The me:tunneling element or attribute was missing or empty.
-No tunneling method was found for R1
 The description element or attribute was missing or empty.
 The me:precision element or attribute was missing or empty.
 The me:MaximumEvolutionTime element or attribute was missing or empty.
