@@ -71,19 +71,9 @@ namespace mesmer
       }
     }
 
-    // Read the transition state (if present).
-
-    PersistPtr ppTransitionState = ppReac->XmlMoveTo("me:transitionState") ;
-    if (ppTransitionState)
-    {
-      TransitionState* pTrans = dynamic_cast<TransitionState*>(GetMolRef(ppTransitionState));
-      if(pTrans)
-        m_TransitionState = pTrans;
-    }
-
     // Read heat of reaction and rate parameters.
-
     return ReadRateCoeffParameters(ppReac) ;
+
   }
 
   //
