@@ -22,7 +22,10 @@ namespace mesmer
     typedef std::map<std::string, MicroRateCalculator*> MicroRateMap;
 
     ///Base class constructor adds the derived class instance to the map
-    MicroRateCalculator(const std::string& id) { get_Map()[id] = this; }
+    MicroRateCalculator(const std::string& id) {
+      get_Map()[id] = this;
+      name = id;
+    }
 
     //Get a pointer to a derived class by providing its id.
     static MicroRateCalculator* Find(const std::string& id)
@@ -30,6 +33,8 @@ namespace mesmer
       MicroRateMap::iterator pos = get_Map().find(id);
       return (pos==get_Map().end()) ? NULL : pos->second;
     }
+
+    const std::string getName() {return name;}
 
     virtual bool calculateMicroRateCoeffs(Reaction* pReact) = 0 ;
 
@@ -43,6 +48,8 @@ namespace mesmer
       static MicroRateMap m;
       return m;
     }
+
+    std::string name;
   };
 
 }//namespace
